<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D222F"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo_image"
        android:layout_width="166dp"
        android:layout_height="163dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/login_image_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dinocloud_logo_claw" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_image"
        app:layout_constraintVertical_bias="0.583"
        tools:visibility="gone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_image" />

    <EditText
        android:id="@+id/password"
        android:layout_width="325dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btn_login_register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:background="#569656"
        android:text="@string/login_btn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_your_password"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_register"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_register_new_acc"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/register_a_new_account_text"
        android:textColor="#3EB1DF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_register"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>